<resources>
    <string name="app_name">星河避难所</string>
    <string name="preference_file_key">vip.kirakira.starcitizenlite.kirakira</string>
    <string name="primary_user_key">PRIMARY_USER</string>
    <string name="is_log_in">IS_USER_LOG_IN</string>
    <string name="all_hanger">总览</string>
    <string name="hanger">机库</string>
    <string name="buyback">回购</string>
    <string name="dollar">$</string>
    <string name="can_upgrade">可升级</string>
    <string name="can_reclaim">可回收</string>
    <string name="can_gift">可礼物</string>
    <string name="items">内容</string>
    <string name="also_contains">包含</string>
    <string name="not_login_error_box_title">登陆后才能查看机库哦</string>
    <string name="not_login_error_box_detail">如频繁显示此消息，请确认登陆授权时间</string>
    <string name="credits">信用点</string>
    <string name="uec">UEC</string>
    <string name="rec">REC</string>
    <string name="hanger_value">机库价值</string>
    <string name="option">设置</string>
    <string name="click_to_login">点击登陆</string>
    <string name="reclaim_warning">融船警告</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="gifit_pledge">赠送礼物</string>
    <string name="please_input_email">请输入接收方的email</string>
    <string name="cancel_gift">取消礼物</string>
    <string name="my_hanger_title">我的机库</string>
    <string name="shop_title">商店</string>
    <string name="please_go_to_site">请前往官网操作</string>
    <string name="unsupport_now">暂不支持</string>
    <string name="network_error">QAQ, 网络错误</string>
    <string name="gift_failed">赠送失败</string>
    <string name="gift_success">赠送成功</string>
    <string name="reclaim_failed">回收失败</string>
    <string name="reclaim_success">回收成功</string>
    <string name="cancel_gift_success">撤回成功</string>
    <string name="cancel_gift_failed">撤回失败</string>
    <string name="buyback_refresh_failed">回购刷新失败</string>
    <string name="hanger_refresh_failed">机库刷新失败</string>
    <string name="ship_info">舰船信息</string>
    <string name="player_search">玩家查询</string>
    <string name="component_search">组件查询</string>
    <string name="my_organization">我的组织</string>
    <string name="spectrum">光谱论坛</string>
    <string name="latest_update">最近更新</string>
    <string name="more">更多</string>
    <string name="referral_code">邀请码(点击复制)</string>
    <string name="total_spent">消费额</string>
    <string name="referral_num">邀请数量</string>
    <string name="register_date">注册时间</string>
    <string name="organization_belong_to">所属舰队</string>
    <string name="organization_position">舰队等级</string>
    <string name="register_location">注册地点</string>
    <string name="only_login_account_can_check_user_info">登陆后才能查看个人信息哦</string>
    <string name="reset_character">重置角色</string>
    <string name="ptu_transfer">转移账号</string>
    <string name="referral_points">邀请点数</string>
    <string name="tutorial">教程一览</string>
    <string name="ship_upgrades">舰船升级</string>
    <string name="is_agree_to_reset">确定要重置角色吗？</string>
    <string name="reset_warning">
        重置角色后，你的aUEC和舰船将会保留，但是组件装备有概率丢失，且重置操作不可逆，确定要重置吗？
    </string>
    <string name="please_login">请先登录</string>
    <string name="operate_after_login">请先登录后继续操作哦～</string>
    <string name="reset_success">重置成功</string>
    <string name="reset_failed">重置失败</string>
    <string name="please_login_after_15_mins">请在15分钟后重新登录</string>
    <string name="access_ptu">进入PTU</string>
    <string name="copy_success">拷贝成功</string>
    <string name="please_login_ptu">请在启动器中选择PTU登陆</string>
    <string name="copy_failed">拷贝失败</string>
    <string name="please_login_ptu_again">请重新登录PTU账号</string>
    <string name="credits_add_success">信用点添加成功</string>
    <string name="credits_add_failed">信用点不足…添加失败</string>
    <string name="switch_account">切换 / 登录 / 注册新账号</string>
    <string name="my_buyback">我的回购</string>
    <string name="my_hanger">我的机库</string>
    <string name="setting">设置</string>
    <string name="drawer_feedback">问题反馈 / 加入我们</string>
    <string name="CHECK_UPDATE_KEY">check_update</string>
    <string name="background_downloading">少女祈祷中…</string>
    <string name="CURRENT_ANNOUNCEMENT_ID">announcement_id</string>
    <string name="title_activity_cool_photo_view">CoolPhotoVIewActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="FIRST_START_KEY">first_start_key</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Sync Preferences -->
    <string name="basic_settings">基础设置</string>
    <string name="auto_add_credits_title">自动添加信用点</string>
    <string name="auto_add_credits_summary">在购买时尽可能使用信用点</string>
    <string name="experimental_feature">实验性功能</string>
    <string name="shop_chinese_localization">商店汉化</string>
    <string name="shop_localization_chinese_summary">汉化商店内容（实验性）</string>
    <string name="request_upgrade_failed">升级初始化失败</string>
    <string name="no_upgrade_target">未找到可升级的舰船</string>
    <string name="choose_upgrade_target">请选择要升级的舰船</string>
    <string name="confirm_upgrade">警告</string>
    <string name="request_upgrade_success">升级成功</string>
    <string name="upgrade_failed">升级请求失败</string>
    <string name="click_arrow_to_choose_upgraded_ship">点击箭头来选择要升级的舰船</string>
    <string name="ship_upgrade">舰船升级</string>
    <string name="buy_upgrade_warning">注意，此商品为舰船升级包，购买后，需在机库中手动应用升级。</string>
    <string name="buy_back_success">回购添加成功</string>
    <string name="buy_back_failed">回购添加失败</string>
    <string name="ship_shop">舰船商店</string>
    <string name="choose_to_ship">选择目标舰船</string>
    <string name="choose_from_ship">选择待升级舰船</string>
    <string name="search_can_upgrade_error">查询可升级船只失败</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_by_web">
        <u>点击使用网页登录</u>
    </string>
    <string name="please_enter_email_and_password">请输入邮箱和密码</string>
    <string name="get_csrf_token_error">获取CSRF Token失败</string>
    <string name="get_captcha_failed">获取Token失败，本月次数可能用尽</string>
    <string name="error">错误</string>
    <string name="already_logged_in">你已登录QAQ</string>
    <string name="get_rsi_token_error">获取RSI Token失败</string>
    <string name="invalid_password">账户或密码错误QAQ</string>
    <string name="multi_step_required">需要两步验证</string>
    <string name="please_input_validation_code">请输入绑定邮箱收到的验证码</string>
    <string name="accept">确认</string>
    <string name="login_success">登录成功</string>
    <string name="jump_to_main_page">即将跳转到主界面</string>
    <string name="token_server_error">网络或Token服务器出错</string>
    <string name="TRANSLATION_VERSION_KEY">translation_string</string>
    <string name="re_enter_password">重新输入密码</string>
    <string name="input_register_email">注册邮箱</string>
    <string name="input_register_password">输入密码</string>
    <string name="register_by_web">点击使用网页注册</string>
    <string name="please_enter_register_email">请输入注册邮箱</string>
    <string name="please_enter_register_password">请输入注册密码</string>
    <string name="password_not_match">密码不匹配</string>
    <string name="handle">用户名</string>
    <string name="please_input_handle">请输入用户名</string>
    <string name="register_success">注册成功</string>
    <string name="email_error">邮箱错误</string>
    <string name="handle_error">用户名错误</string>
    <string name="password_error">密码错误</string>
    <string name="default_referral_code">STAR-QSCF-FXKT</string>
    <string name="jump_to_email_check">请确认邮箱</string>
    <string name="please_wait_init">请稍等初始化完成</string>
    <string name="localization_tutorial">汉化教程</string>
    <string name="enable_localization">enable_localization</string>
    <string name="enable_localization_key">enable_localization</string>
    <string name="translation_version_key">TranslationVersion</string>
    <string name="UUID">unique_id</string>
    <string name="click_arrow_to_choose_upgrade_to_ship">点击箭头来选择要升级到的舰船</string>
    <string name="AUTO_ADD_CREDITS_KEY">auto_add_credits</string>
    <string name="cirno_token_error">可能原因是验证服务器过载，或本月次数用尽</string>
    <string name="uuid_is_copied">UUID已复制到剪贴板</string>
    <string name="promotion_button">礼物领取</string>
    <string name="redeem_promotion">礼物兑换</string>
    <string name="logout_current_account">登出当前账号</string>
    <string name="do_not_allow_reclaim">禁止融船操作</string>
    <string name="do_not_allow_reclaim_summary">打死我都不融船！</string>
    <string name="theme_key">CURRENT_THEME_KEY</string>
    <string name="warbond_short">WB</string>
    <string name="crawled_page_key">CRAWlED_PAGE_KEY</string>
    <string name="hangar_log">机库日志</string>
    <string name="SHIP_DETAIL_VERSION_KEY">ship_detail_version_key</string>
    <string name="more_info">详情 ></string>
    <string name="pledge_detail">物品详情</string>
    <string name="upgrade_detail">升级记录</string>
    <string name="VIP_EXPIRE">refuge_vip_expire</string>
    <string name="IS_VIP">refuge_is_vip</string>
    <string name="TOTAL_VIP_TIME">refuge_total_vip_time</string>
    <string name="REFUGE_CREDIT">refuge_credit</string>
    <string name="please_enter_reclaim_password">请输入融船密码</string>
    <string name="theme_color_key">theme_color_key</string>
    <string name="banned_reclaim_key">banned_reclaim_key</string>
    <string name="already_banned_reclaim">已禁止避难所的融船操作</string>
    <string name="please_switch_off_banned_reclaim">请在设置中关闭禁止融船选项后重试哦</string>
    <string name="no_cirno_token">Token数量不足</string>
    <string name="invalid_validation_code">校验码错误</string>
    <string name="current_hanger_value_key">CURRENT_HANGER_VALUE</string>
    <string name="current_hanger_value">当前机库价值</string>
    <string name="GAME_TRANSLATION_KEY">game_translation_key</string>
    <string name="please_input_english_game_content">请在输入框中填入要翻译的文本</string>
    <string name="localization_search">汉化查询</string>
    <string name="upgrade_to">升级到</string>
    <string name="ship_upgrade_calculator">舰船升级路径规划器</string>
    <string name="total_cost">总花费: </string>
    <string name="credit_cost">信用点: </string>
    <string name="cash_cost">现金: </string>
    <string name="ccu_calculator_settings">舰船升级规划器设置</string>
    <string name="upgrade_choose_from_ship">选择待升级舰船</string>
    <string name="apply">应用</string>
    <string name="upgrade_choose_to_ship">选择目标舰船</string>
    <string name="upgrade_preference">升级链自定义</string>
    <string name="use_history_ccu">使用历史CCU</string>
    <string name="only_can_buy_ships">优先选择可购买舰船</string>
    <string name="use_buyback_upgrade">使用回购中的升级包</string>
    <string name="history_ccu_weight">历史升级包权重</string>
    <string name="history_ccu_weight_explain">
        历史升级包权重决定了历史CCU在升级链中所占的比重，权重越大，避难所更倾向于选择历史CCU，权重越低，避难所更倾向于使用机库、回购或是商店里的CCU来替代历史省钱CCU，即使这样会花费更多现金或信用点。
    </string>
    <string name="select_from_ship">选择起始舰船</string>
    <string name="select_to_ship">选择目标舰船</string>
    <string name="use_hangar_upgrade">使用机库中的升级包</string>
    <string name="only_can_buy_ship_explain">
        勾选此项后避难所将会尝试优先使用当前可购买的CCU，即使这样会消耗更多的现金或信用点。
    </string>
    <string name="check_banned_ccu">查看禁用CCU</string>
    <string name="hangar_upgrade">机库升级</string>
    <string name="hangar_upgrade_cost">机库消耗: </string>
    <string name="other_upgrade_cost">其他消耗: </string>
    <string name="please_select_removed_banned_ccu">请选择要移出黑名单的升级包</string>
    <string name="original_cost">原花费:</string>
    <string name="device_id_key">DEVIC_ID_KEY</string>
    <string name="VIBRATE_KEY">enable_viber</string>
    <string name="type_captcha">输入验证码</string>
</resources>