<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:theme="@style/Theme.StarcitizenLite">
    <PreferenceCategory android:title="@string/basic_settings">
        <SwitchPreferenceCompat
                android:key="auto_add_credits"
                android:title="@string/auto_add_credits_title"
                android:defaultValue="false"
                android:summary="@string/auto_add_credits_summary"/>
        <SwitchPreferenceCompat
                android:key="banned_reclaim"
                android:title="@string/do_not_allow_reclaim"
                android:defaultValue="false"
                android:summary="@string/do_not_allow_reclaim_summary"/>
<!--        <EditTextPreference-->
<!--                android:key="edittext_preference"-->
<!--                android:title="Edit text preference"-->
<!--                android:summary="An example that uses an edit text dialog"/>-->
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/experimental_feature">
        <SwitchPreferenceCompat
                android:key="enable_localization"
                android:title="@string/shop_chinese_localization"
                android:defaultValue="true"
                android:summary="@string/shop_localization_chinese_summary"/>
        <SwitchPreferenceCompat
                android:key="enable_vibrate"
                android:title="启用震动反馈"
                android:defaultValue="false"
                android:summary="为避难所添加震动反馈（实验性）"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="避难所 Premium专属">
        <ListPreference
                android:key="theme_color"
                android:title="主题"
                android:summary="个性化设置避难所主题"
                android:entries="@array/theme_entries"
                android:entryValues="@array/theme_values"
                android:defaultValue="DEEP_BLUE" />
    </PreferenceCategory>
    <PreferenceCategory android:title="关于">

        <Preference
                android:key="about"
                android:title="星河避难所"
                android:summary="星河避难所 (StarRefuge) 与 CIG无任何联系">
        </Preference>
        <Preference
                android:key="my_uuid"
                android:title="本地UUID"
                android:summary="" />
        <Preference
                android:key="about"
                android:title="作者"
                android:summary="妖精 &lt;summerkirakira@gmail.com&gt;">
            <intent android:action="android.intent.action.VIEW"
                    android:data="https://github.com/summerkirakira"/>
        </Preference>
        <Preference
                android:key="about"
                android:title="投喂开发者"
                android:summary="这么可爱不来支持一下吗？" >
            <intent android:action="android.intent.action.VIEW"
                    android:data="https://afdian.net/a/summerkirakira" />
        </Preference>
        <Preference
                android:key="about"
                android:title="最新版本"
                android:summary="https://github.com/summerkirakira/Starcitizen-lite/releases/latest">
            <intent android:action="android.intent.action.VIEW"
                    android:data="https://github.com/summerkirakira/Starcitizen-lite/releases/latest"/>
        </Preference>
        <Preference
                android:key="current_version"
                android:title="版本号"
                android:summary=""/>
        <Preference
                android:key="about"
                android:title="开源协议"
                android:summary="GNU General Public License v3.0" />

        <PreferenceScreen
                android:key="about"
                android:title="源代码"
                android:summary="https://github.com/summerkirakira/Starcitizen-lite">
            <intent android:action="android.intent.action.VIEW"
                    android:data="https://github.com/summerkirakira/Starcitizen-lite"/>
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>