<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.me.MeFragment">
        <com.qmuiteam.qmui.widget.QMUIEmptyView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="60dp"
                android:id="@+id/error_box" />
        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/root_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:id="@+id/personal_info_top_layout"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@color/personal_info_background" >
            <io.getstream.avatarview.AvatarView
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:id="@+id/avatar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="80dp"
                    app:avatarViewIndicatorBorderColor="@color/white"
                    app:avatarViewIndicatorBorderSizeCriteria="10"
                    app:avatarViewInitialsTextStyle="bold"
                    app:avatarViewShape="circle" />
            <io.getstream.avatarview.AvatarView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/organization_image"
                    app:layout_constraintEnd_toEndOf="@+id/avatar"
                    app:avatarViewInitialsBackgroundColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="@+id/avatar"
                    app:avatarViewIndicatorBorderColor="@color/white"
                    app:avatarViewIndicatorBorderSizeCriteria="10"
                    app:avatarViewInitialsTextStyle="bold"
                    app:avatarViewShape="circle" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:layout_marginTop="300dp"
                    android:orientation="vertical"
                    android:elevation="10dp" >
                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="30dp">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="20dp"
                            android:id="@+id/handle"
                            android:layout_marginTop="20dp"
                            android:textColor="@color/black"
                            tools:text="CinoBaka"
                            android:textSize="32sp" />
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              app:layout_constraintStart_toStartOf="parent"
                              app:layout_constraintTop_toBottomOf="@+id/handle"
                              android:id="@+id/name"
                              android:textSize="24sp"
                              android:layout_marginStart="20dp"
                              android:textColor="@color/black"
                              tools:text="Moogo" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <View style="@style/personal_info_divider"/>
                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            style="@style/personal_detail_info"
                            android:id="@+id/register_date"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:text="@string/register_date" />
                    <TextView
                            style="@style/personal_detail_info"
                            android:id="@+id/register_date_value"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="20dp"
                            tools:text="Jun 28, 2019" />
                    <TextView
                            style="@style/personal_detail_info"
                            android:id="@+id/organization_name"
                            app:layout_constraintTop_toBottomOf="@+id/register_date_value"
                            app:layout_constraintStart_toStartOf="parent"
                            android:text="@string/organization_belong_to" />
                    <TextView
                            style="@style/personal_detail_info"
                            android:id="@+id/organization_name_value"
                            app:layout_constraintTop_toBottomOf="@+id/register_date_value"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="20dp"
                            tools:text="星狡镖局" />
                    <TextView
                            style="@style/personal_detail_info"
                            android:id="@+id/organization_position"
                            app:layout_constraintTop_toBottomOf="@+id/organization_name_value"
                            app:layout_constraintStart_toStartOf="parent"
                            android:text="@string/organization_position" />
                    <TextView
                            style="@style/personal_detail_info"
                            android:id="@+id/organization_position_value"
                            app:layout_constraintTop_toBottomOf="@+id/organization_name_value"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="20dp"
                            tools:text="等级5" />

                </androidx.constraintlayout.widget.ConstraintLayout>
                <View style="@style/personal_info_divider"/>
                <androidx.constraintlayout.widget.ConstraintLayout
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            android:id="@+id/hanger_value"
                              app:layout_constraintTop_toTopOf="parent"
                              app:layout_constraintStart_toStartOf="parent"
                            android:text="@string/hanger_value"
                            style="@style/personal_detail_info"/>
                    <TextView style="@style/personal_detail_info"
                              app:layout_constraintBaseline_toBaselineOf="@+id/hanger_value"
                              android:id="@+id/hanger_value_number"
                              app:layout_constraintEnd_toEndOf="parent"
                              android:layout_marginEnd="20dp"
                              tools:text="2000 USD"
                              android:layout_marginStart="20dp" />
                    <TextView style="@style/personal_detail_info"
                              android:id="@+id/credits_number"
                              app:layout_constraintTop_toBottomOf="@+id/hanger_value"
                              app:layout_constraintStart_toStartOf="parent"
                              android:text="@string/credits"
                              android:layout_marginStart="20dp" />
                    <TextView style="@style/personal_detail_info"
                              app:layout_constraintBaseline_toBaselineOf="@+id/credits_number"
                              android:id="@+id/credits_value"
                              app:layout_constraintEnd_toEndOf="@+id/hanger_value_number"
                              tools:text="200 USD"
                              android:layout_marginStart="20dp" />
                    <TextView style="@style/personal_detail_info"
                              android:id="@+id/total_spend"
                              app:layout_constraintStart_toStartOf="parent"
                              app:layout_constraintTop_toBottomOf="@+id/credits_number"
                              android:text="@string/total_spent" />
                    <TextView style="@style/personal_detail_info"
                              app:layout_constraintBaseline_toBaselineOf="@+id/total_spend"
                              android:id="@+id/total_spend_value"
                              app:layout_constraintEnd_toEndOf="@+id/hanger_value_number"
                              tools:text="2121 USD"
                              android:layout_marginStart="20dp" />
                    <TextView style="@style/personal_detail_info"
                              android:id="@+id/uec_number"
                              app:layout_constraintStart_toStartOf="parent"
                              app:layout_constraintTop_toBottomOf="@+id/total_spend"
                              android:text="@string/uec" />
                    <TextView style="@style/personal_detail_info"
                              app:layout_constraintBaseline_toBaselineOf="@+id/uec_number"
                              android:id="@+id/uec_value"
                              app:layout_constraintEnd_toEndOf="@+id/hanger_value_number"
                              tools:text="200 USD"
                              android:layout_marginStart="20dp" />
                    <TextView style="@style/personal_detail_info"
                              android:id="@+id/rec_number"
                              app:layout_constraintStart_toStartOf="parent"
                              app:layout_constraintTop_toBottomOf="@+id/uec_number"
                              android:text="@string/rec" />
                    <TextView style="@style/personal_detail_info"
                              app:layout_constraintBaseline_toBaselineOf="@+id/rec_number"
                              android:id="@+id/rec_value"
                              app:layout_constraintEnd_toEndOf="@+id/hanger_value_number"
                              tools:text="200 USD"
                              android:layout_marginStart="20dp" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <View style="@style/personal_info_divider"/>
                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView style="@style/personal_detail_info"
                              android:id="@+id/referral_code"
                              app:layout_constraintStart_toStartOf="parent"
                              app:layout_constraintTop_toTopOf="parent"
                              android:text="@string/referral_num" />
                    <TextView style="@style/personal_detail_info"
                              app:layout_constraintBaseline_toBaselineOf="@+id/referral_code"
                              android:id="@+id/referral_code_value"
                              android:layout_marginEnd="20dp"
                              app:layout_constraintEnd_toEndOf="parent"
                              app:layout_constraintTop_toTopOf="parent"
                              tools:text="30人"
                              android:layout_marginStart="20dp" />
                    <TextView style="@style/personal_detail_info"
                              android:id="@+id/referral_code_text"
                              app:layout_constraintStart_toStartOf="parent"
                              app:layout_constraintTop_toBottomOf="@+id/referral_code"
                              android:text="@string/referral_code" />
                    <TextView style="@style/personal_detail_info"
                              app:layout_constraintBaseline_toBaselineOf="@+id/referral_code_text"
                              android:id="@+id/referral_code_value_text"
                              android:layout_marginEnd="20dp"
                              app:layout_constraintEnd_toEndOf="parent"
                              app:layout_constraintTop_toTopOf="parent"
                              tools:text="STAR-QSCF-FXKT"
                              android:layout_marginStart="20dp" />
                </androidx.constraintlayout.widget.ConstraintLayout>




            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>